--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,28 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="org.sfcta.cycletracks"
+      package="com.crankworks.cycletracks"
       android:versionCode="8" android:versionName="1.03">
-<application android:label="@string/app_name" android:debuggable="false" android:icon="@drawable/icon72">
-        <activity android:label="@string/app_name" android:name=".MainInput" android:launchMode="singleTask">
+
+<!-- <application android:label="@string/app_name" android:debuggable="false" android:icon="@drawable/icon72"> -->
+    <application android:label="@string/app_name" android:icon="@drawable/icon72">
+
+        <activity android:label="@string/app_name" android:name="com.crankworks.cycletracks.MainInput" android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-    <activity android:label="@string/recording_title" android:name="RecordingActivity" android:finishOnTaskLaunch="true" android:launchMode="singleInstance"></activity>
+        <activity android:label="@string/recording_title" android:name="com.crankworks.cycletracks.RecordingActivity" android:finishOnTaskLaunch="true" android:launchMode="singleInstance"></activity>
+        <activity android:name="com.crankworks.cycletracks.SaveTrip" android:finishOnTaskLaunch="true" android:launchMode="singleInstance"></activity>
+        <activity android:name="com.crankworks.cycletracks.ShowMap" android:finishOnTaskLaunch="true" android:launchMode="singleTop"></activity>
+        <activity android:name="com.crankworks.cycletracks.UserInfoActivity" android:finishOnTaskLaunch="true" android:launchMode="singleInstance"></activity>
+        <service android:name="com.crankworks.cycletracks.RecordingService" android:enabled="true" android:exported="true"></service>
+        <uses-library android:name="com.google.android.maps"></uses-library>
+    </application>
 
-<activity android:name="SaveTrip" android:finishOnTaskLaunch="true" android:launchMode="singleInstance"></activity>
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="19"/>
 
-<activity android:name="ShowMap" android:finishOnTaskLaunch="true" android:launchMode="singleTop"></activity>
-<activity android:name="UserInfoActivity" android:finishOnTaskLaunch="true" android:launchMode="singleInstance"></activity>
-<service android:name="RecordingService" android:enabled="true" android:exported="true"></service><uses-library android:name="com.google.android.maps"></uses-library>
-</application>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
+    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
-<uses-sdk android:minSdkVersion="16" android:targetSdkVersion="19"/>
-
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-
-<supports-screens android:normalScreens="true" android:anyDensity="true"/>
+    <supports-screens android:normalScreens="true" android:anyDensity="true"/>
 </manifest>
