--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.crankworks.cycletracks"
+      android:installLocation="auto"
       android:versionCode="8" android:versionName="1.03">
 
 <!-- <application android:label="@string/app_name" android:debuggable="false" android:icon="@drawable/icon72"> -->
@@ -21,7 +22,7 @@
         <uses-library android:name="com.google.android.maps"></uses-library>
     </application>
 
-    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="19"/>
+    <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="18"/>
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
