--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.crankworks.cycletracks"
-      android:installLocation="auto"
       android:versionCode="8" android:versionName="1.03">
+
+    <uses-sdk android:minSdkVersion="16" android:targetSdkVersion="18" />
 
 <!-- <application android:label="@string/app_name" android:debuggable="false" android:icon="@drawable/icon72"> -->
     <application android:label="@string/app_name" android:icon="@drawable/icon72">
@@ -14,18 +15,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:label="@string/recording_title" android:name="com.crankworks.cycletracks.RecordingActivity" android:finishOnTaskLaunch="true" android:launchMode="singleInstance"></activity>
-        <activity android:name="com.crankworks.cycletracks.SaveTrip" android:finishOnTaskLaunch="true" android:launchMode="singleInstance"></activity>
-        <activity android:name="com.crankworks.cycletracks.ShowMap" android:finishOnTaskLaunch="true" android:launchMode="singleTop"></activity>
-        <activity android:name="com.crankworks.cycletracks.UserInfoActivity" android:finishOnTaskLaunch="true" android:launchMode="singleInstance"></activity>
-        <service android:name="com.crankworks.cycletracks.RecordingService" android:enabled="true" android:exported="true"></service>
-        <uses-library android:name="com.google.android.maps"></uses-library>
+        <activity android:label="@string/recording_title" android:name="com.crankworks.cycletracks.RecordingActivity" android:finishOnTaskLaunch="true" android:launchMode="singleInstance" />
+        <activity android:name="com.crankworks.cycletracks.SaveTrip" android:finishOnTaskLaunch="true" android:launchMode="singleInstance" />
+        <activity android:name="com.crankworks.cycletracks.ShowMap" android:finishOnTaskLaunch="true" android:launchMode="singleTop" />
+        <activity android:name="com.crankworks.cycletracks.UserInfoActivity" android:finishOnTaskLaunch="true" android:launchMode="singleInstance" />
+        <service android:name="com.crankworks.cycletracks.RecordingService" android:enabled="true" android:exported="true" />
+        <uses-library android:name="com.google.android.maps" />
     </application>
 
-    <uses-sdk android:minSdkVersion="18" android:targetSdkVersion="18"/>
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.INTERNET"></uses-permission>
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <supports-screens android:normalScreens="true" android:anyDensity="true"/>
 </manifest>
